--- a/_posts/2017-01-01-focus.md
+++ b/_posts/2017-01-01-focus.md
@@ -1,3 +1,8 @@
+---
+icon: fa-balance-scale
+permalink: focus
+---
+
 I’ve decided to spend my time in 2017 focusing on what matters most to me, and that means spending more time in the moment and less distracted by my devices.
 
 To facilitate this I’m stepping away from instant messaging. The best way to contact me now is via email.
