--- a/_posts/2017-01-01-focus.md
+++ b/_posts/2017-01-01-focus.md
@@ -1,6 +1,6 @@
 ---
 icon: fa-balance-scale
-permalink: focus
+permalink: blog/focus
 ---
 
 I’ve decided to spend my time in 2017 focusing on what matters most to me, and that means spending more time in the moment and less distracted by my devices.
