Update Blog to utilize blog category

--- a/_posts/2017-01-01-focus.md
+++ b/_posts/2017-01-01-focus.md
@@ -1,6 +1,7 @@
 ---
 icon: fa-balance-scale
 permalink: blog/focus
+categories: Blog
 ---
 
 I’ve decided to spend my time in 2017 focusing on what matters most to me, and that means spending more time in the moment and less distracted by my devices.
